the config processor now generates nested classes properly